[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/gameplay/WorldMapOverlay.gd" id="1"]

[node name="WorldMapOverlay" type="CanvasLayer"]
layer = 19
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="RootPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -380.0
offset_right = 560.0
offset_bottom = 380.0

[node name="Margin" type="MarginContainer" parent="RootPanel"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="RootPanel/Margin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "World Map"

[node name="StatusLabel" type="Label" parent="RootPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="MapLabel" type="RichTextLabel" parent="RootPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 560)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
autowrap_mode = 0
scroll_active = true

[node name="FooterLabel" type="Label" parent="RootPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Arrows: Move cursor | Enter: Fast travel (visited only) | M: Close"

